name:                PLStore
version:             0.1.0.0
synopsis:            Datastore interface and definitions for storing PL code
description:         Datastore interface and in-memory, file and nested
                     implementations for storing PL code.
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            PL
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PLStore
                     , PLStore.Code
                     , PLStore.File
                     , PLStore.File.Path
                     , PLStore.Hash
                     , PLStore.DHT
                     , PLStore.Memory
                     , PLStore.Nested
                     , PLStore.Short

  -- other-modules:       
  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >= 4.12
                     , containers >=0.5

                     , PL >= 0.2
                     , PLGrammar  >= 0.4
                     , PLPrinter  >= 0.3
                     , Reversible >= 0.1
                     , DHT        >= 0.3
                     , DHT-SimpleNode >= 0.3

                     , memory
                     , time
                     , hedgehog
                     , hashing
                     , directory-tree
                     , filepath
                     , filepath-bytestring
                     , bytestring
                     , utf8-string
                     , base58-bytestring
                     , hspec
                     , quickcheck-instances
                     , system-fileio
                     , semigroups
                     , directory
                     , text
                     , pretty-tree
                     , ghc-prim

  -- hs-source-dirs:      
  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts
  ghc-options: -fwarn-incomplete-patterns -Werror=incomplete-patterns

test-suite hspec
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    Test

  other-modules:     PLStore.Test.File.PathSpec
                   , PLStore.Test.DHTSpec

  build-depends:     base >=4.7
                   , PL
                   , PLStore
                   , PLGrammar  >= 0.4
                   , PLPrinter  >= 0.3
                   , Reversible >= 0.1

                   , QuickCheck
                   , containers >=0.5
                   , hedgehog
                   , hspec
                   , bytestring
                   , quickcheck-instances
                   , semigroups
                   , text
                   , ghc-prim

  default-language:  Haskell2010
  ghc-options: -threaded -rtsopts
  other-extensions:  OverloadedStrings
                   , GeneralizedNewtypeDeriving
                   , LambdaCase

