cabal-version:       3.8
name:                PLStore-File
version:             0.1.0.0
synopsis:            Definitions for storing PL values in the file system
description:
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            PL
build-type:          Simple

library
  exposed-modules:     PLStore.File
                     , PLStore.File.Path

  -- other-modules:       
  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >= 4.12
                     , containers >=0.5

                     , PLStore
                     , PLGrammar  >= 0.4
                     , PLPrinter  >= 0.3
                     , Reversible >= 0.1

                     , memory
                     , time
                     , hedgehog
                     , hashing
                     , directory-tree
                     , filepath
                     , filepath-bytestring
                     , bytestring
                     , utf8-string
                     , base58-bytestring
                     , hspec
                     , quickcheck-instances
                     , system-fileio
                     , semigroups
                     , directory
                     , text
                     , pretty-tree
                     , ghc-prim

  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall -fwarn-incomplete-patterns -Werror=incomplete-patterns -threaded -rtsopts

test-suite hspec
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    Test

  other-modules:     PLStore.Test.File.PathSpec

  build-depends:     base >=4.7
                   , PLStore
                   , PLStore-File
                   , PLHash
                   , PLGrammar  >= 0.4
                   , PLPrinter  >= 0.3
                   , Reversible >= 0.1

                   , QuickCheck
                   , containers >=0.5
                   , hedgehog
                   , hspec
                   , bytestring
                   , quickcheck-instances
                   , semigroups
                   , text
                   , ghc-prim

  default-language:  Haskell2010
  ghc-options: -Wall -threaded -rtsopts
  other-extensions:  OverloadedStrings
                   , GeneralizedNewtypeDeriving
                   , LambdaCase

